added USA claims tag

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -1090,6 +1090,7 @@ URP_ADJ;Romanian;;;;;;;;;;;;;x
 URU_ADJ;Uruguayan;Uruguayen;Uruguayisch;;;;;;;;;;;x
 USA_ADJ;American;Américain;Amerikanisch;;;;;;;;;;;x
 USA_absolute_monarchy_ADJ;American;Américain;Amerikanisch;;;;;;;;;;;x
+US2_ADJ;American;Américain;Amerikanisch;;;;;;;;;;;x
 USA_hms_government_ADJ;American;Américain;Amerikanisch;;;;;;;;;;;x
 USA_proletarian_dictatorship_ADJ;American;Américain;Amerikanisch;;;;;;;;;;;x
 USS_ADJ;South American;;;;;;;;;;;;;x
