--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -2326,6 +2326,15 @@ USA_hms_government;Kingdom of America;;;;;;;;;;;;;x
 USA_presidential_dictatorship;United States of America;États-Unis;;;;;;;;;;;;x
 USA_proletarian_dictatorship;People's Republic of America;;;;;;;;;;;;;x
 USA_prussian_constitutionalism;American Empire;;;;;;;;;;;;;x
+US2_absolute_monarchy;American Claims;;;;;;;;;;;;;x
+US2_bourgeois_dictatorship;American Claims;;;;;;;;;;;;;x
+US2_democracy;American Claims;;;;;;;;;;;;;x
+US2_dominion;American Claims;;;;;;;;;;;;;x
+US2_fascist_dictatorship;American Claims;;;;;;;;;;;;;x
+US2_hms_government;American Claims;;;;;;;;;;;;;x
+US2_presidential_dictatorship;American Claims;;;;;;;;;;;;;x
+US2_proletarian_dictatorship;American Claims;;;;;;;;;;;;;x
+US2_prussian_constitutionalism;American Claims;;;;;;;;;;;;;x
 USS_absolute_monarchy;South American Empire;;;;;;;;;;;;;x
 USS_democracy;Union of South American Republics;;;;;;;;;;;;;x
 USS_fascist_dictatorship;Grand Union of South America;;;;;;;;;;;;;x
