--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -759,6 +759,7 @@ URM;Urmia;;;;;;;;;;;;;x
 URP;United Principalities;;;;;;;;;;;;;x
 URU;Uruguay;Uruguay;Uruguay;;;;;;;;;;;x
 USA;United States of America;États-Unis;USA;;;;;;;;;;;x
+US2;American Claims;;;;;;;;;;;;;x
 USS;United States of South America;;;;;;;;;;;;;x
 UTI;Territory Exchange;;;;;;;;;;;;;x
 U01;Assimilation Campaign;;;;;;;;;;;;;x
