added tag for MEX claims

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -688,6 +688,7 @@ MEC_ADJ;Mecklenburgian;Mecklembourgeois;Mecklenburgisch;;;;;;;;;;;x
 MEI_ADJ;Saxon;Saxon;Sächsisch;;;;;;;;;;;x
 MEW_ADJ;Mewari;Mewari;Mewari;;;;;;;;;;;x
 MEX_ADJ;Mexican;Mexicain;Mexikanisch;;;;;;;;;;;x
+ME2_ADJ;Mexican;Mexicain;Mexikanisch;;;;;;;;;;;x
 MGH_ADJ;Maghrebi;;;;;;;;;;;;;x
 MGL_ADJ;Mongolian;Mongole;Mongolisch;;;;;;;;;;;x
 MHR_ADJ;Mahrai;;;;;;;;;;;;;x
