--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1620,6 +1620,14 @@ MEX_federal_democracy;United Mexican States;;;;;;;;;;;;;x
 MEX_hms_government;Mexican Empire;;;;;;;;;;;;;x
 MEX_presidential_dictatorship;Mexican Republic;;;;;;;;;;;;;x
 MEX_prussian_constitutionalism;Mexican Empire;;;;;;;;;;;;;x
+ME2_absolute_monarchy;Mexican Claims;;;;;;;;;;;;;x
+ME2_colonial_company;New Spanish Claims;;;;;;;;;;;;;x
+ME2_democracy;Mexican Claims;;;;;;;;;;;;;x
+ME2_dominion;Mexican Claims;;;;;;;;;;;;;x
+ME2_federal_democracy;Mexican Claims;;;;;;;;;;;;;x
+ME2_hms_government;Mexican Claims;;;;;;;;;;;;;x
+ME2_presidential_dictatorship;Mexican Claims;;;;;;;;;;;;;x
+ME2_prussian_constitutionalism;Mexican Claims;;;;;;;;;;;;;x
 MGL_colonial_company;Wai Menggu;;;;;;;;;;;;;x
 MGL_proletarian_dictatorship;Mongolian People's Republic;;;;;;;;;;;;;x
 MGL_theocracy;Bogd Khaanate;;;;;;;;;;;;;x
