--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -461,6 +461,7 @@ MEC;Mecklenburg-Schwerin;Mecklenbourg;Mecklenburg;;;;;;;;;;;x
 MEI;Saxe-Meiningen;Saxe-Meiningen;Sachsen-Meiningen;;;;;;;;;;;x
 MEW;Mewar;Mewar;Mewar;;;;;;;;;;;x
 MEX;Mexico;Mexique;Mexiko;;;;;;;;;;;x
+ME2;Mexican Claims;;;;;;;;;;;;;x
 MGH;Maghreb;;;;;;;;;;;;;x
 MGL;Mongolia;Mongolie;Mongolei;;;;;;;;;;;x
 MHR;Mahra;;;;;;;;;;;;;x
