added CAN claims

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -229,6 +229,7 @@ CAL_ADJ;Californian;Californien;Kalifornisch;;;;;;;;;;;x
 CAL_colonial_company_ADJ;Californio;Californien;Kalifornisch;;;;;;;;;;;x
 CAM_ADJ;Cambodian;Cambodgien;Kambodschanisch;;;;;;;;;;;x
 CAN_ADJ;Canadian;Canadien;Kanadisch;;;;;;;;;;;x
+CA2_ADJ;Canadian;Canadien;Kanadisch;;;;;;;;;;;x
 CAR_ADJ;Central African;;;;;;;;;;;;;x
 CAR_hms_government_ADJ;Ubangi;;;;;;;;;;;;;x
 CAR_prussian_constitutionalism_ADJ;Ubangi;;;;;;;;;;;;;x
