--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -554,6 +554,15 @@ CAN_dominion;Dominion of Canada;;;;;;;;;;;;;x
 CAN_hms_government;Canada;;;;;;;;;;;;;x
 CAN_parliamentary_republic;Canada;;;;;;;;;;;;;x
 CAN_prussian_constitutionalism;Canada;;;;;;;;;;;;;x
+CA2_absolute_monarchy;Canadian Claims;;;;;;;;;;;;;x
+CA2_colonial_company;British North American Claims;;;;;;;;;;;;;x
+CA2_democracy;Canadian Claims;;;;;;;;;;;;;x
+CA2_dominion;British North American Claims;;;;;;;;;;;;;x
+CA2_dominion2;British North American Claims;;;;;;;;;;;;;x
+CA2_dominion3;British North American Claims;;;;;;;;;;;;;x
+CA2_hms_government;Canadian Claims;;;;;;;;;;;;;x
+CA2_parliamentary_republic;Canadian Claims;;;;;;;;;;;;;x
+CA2_prussian_constitutionalism;Canadian Claims;;;;;;;;;;;;;x
 CAR_absolute_monarchy;Central African Empire;;;;;;;;;;;;;x
 CAR_colonial_company;Afrique Équatoriale;;;;;;;;;;;;;x
 CAR_fascist_dictatorship;Central African Empire;;;;;;;;;;;;;x
