--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -136,6 +136,7 @@ BZD;Bayazid;;;;;;;;;;;;;x
 CAL;California;Californie;Kalifornische Republik;;;;;;;;;;;x
 CAM;Cambodia;Cambodge;Kambodscha;;;;;;;;;;;x
 CAN;Canada;Canada;Kanada;;;;;;;;;;;x
+CA2;Canadian Claims;;;;;;;;;;;;;x
 CAR;Central African Republic;;;;;;;;;;;;;x
 CAS;Cascadia;;;;;;;;;;;;;x
 CAT;Catalonia;Catalogne;Katalonien;;;;;;;;;;;x
