added util poptype

--- a/TGC/localisation/00_pop-types.csv
+++ b/TGC/localisation/00_pop-types.csv
@@ -16,3 +16,4 @@ serfs;Serfs;;;;;;;;;;;;;x
 slaves;Slaves;;;;;;;;;;;;;x
 soldiers;Soldiers;;;;;;;;;;;;;x
 tribals;Tribesmen;;;;;;;;;;;;;x
+utility;Utility;;;;;;;;;;;;;x
