Lacandon and Flores
all the stuff related to these two provinces

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3706,8 +3706,8 @@ PROV3704;Fukuchiyama;;;;;;;;;;;;;x
 PROV3705;Izushi;;;;;;;;;;;;;x
 PROV3706;Miyazu;;;;;;;;;;;;;x
 PROV3707;Maizuru;;;;;;;;;;;;;x
-PROV3708;Karayazi;;;;;;;;;;;;;x
-PROV3709;Signakh;;;;;;;;;;;;;x
+PROV3708;Flores;;;;;;;;;;;;;x
+PROV3709;Lacandon;;;;;;;;;;;;;x
 PROV3710;Ilisu;;;;;;;;;;;;;x
 PROV3711;Kutkashen;;;;;;;;;;;;;x
 PROV3712;Gokchay;;;;;;;;;;;;;x
