--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -75,3 +75,4 @@ renaming_1_y;Renamings will happen §Gonce a year§!.§b;;;;;;;;;;;;x
 renaming_2_y;Renamings will happen every §G2 years§!.§b;;;;;;;;;;;;x
 renaming_5_y;Renamings will happen every §G5 years§!.§b;;;;;;;;;;;;x
 event_505001_custom_tooltip;§RAn Alyaskan culture will begin to emerge in our North American holdings...§!;;;;;;;;;;;;x
+already_done;§!You have already done this!§!;;;;;;;;;;;;x
