added more to NA cossack event

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -752,6 +752,20 @@ EVTOPTA505000;A sensible decision, like any made by our magnificent Tsar!;;;;;;;
 EVTDESC505001;The Mordvinov Plan had a singular objective : to create a stable base of operations on the Pacific. Left unspoken was that this base would be unmistakably Russian—and would remain so for eternity. However, after we began our resettlement of serfs to the Kaliforniya Territory, a number of our administrators have observed that the settlers are gradually forsaking their Russian roots, with quite a few beginning to identify with their new home instead of Mother Russia. This 'Alyaskan' identity is especially prominent among intellectuals, many of whom migrated there with the promise of a 'more liberal' environment than back home. Although limited in scope, it is evident that this supposed 'Alyaskan' culture is straying more and more from what is properly Russian.;;;;;;;;;;;;;x
 EVTNAME505001;An Alyaskan Culture?;;;;;;;;;;;;;x
 EVTOPTA505001;There is only one Russian culture!;;;;;;;;;;;;;x
+EVTDESC505002;Localization;;;;;;;;;;;;;x
+EVTNAME505002;Cossack Settlement - Kaliforniya;;;;;;;;;;;;;x
+EVTOPTA505002;San Francisco Bay;;;;;;;;;;;;;x
+EVTOPTB505002;Lower Colorado River;;;;;;;;;;;;;x
+EVTOPTC505002;Salt Lake;;;;;;;;;;;;;x
+EVTOPTD505002;Las Vegas;;;;;;;;;;;;;x
+EVTOPTE505002;Settlement Options in Oregon;;;;;;;;;;;;;x
+EVTDESC505003;Localization;;;;;;;;;;;;;x
+EVTNAME505003;Cossack Settlement - Oregon;;;;;;;;;;;;;x
+EVTOPTA505003;Portland;;;;;;;;;;;;;x
+EVTOPTB505003;Vancouver;;;;;;;;;;;;;x
+EVTOPTC505003;Upper Columbia River;;;;;;;;;;;;;x
+EVTOPTD505003;Upper Snake River;;;;;;;;;;;;;x
+EVTOPTE505003;Settlement Options in the Rocky Mountains;;;;;;;;;;;;;x
 EVTDESC530001;On a night in $YEAR$, a fire broke out on the 3rd floor of J. L. Van Doren, Oil Merchant and Stearin Candle Manufacturer, known as a seller of whale oil, at 34 New Street in Manhattan, and spread quickly to adjoining buildings. During the ten and a half hours that it burned, the fire killed 4 Firefighters and 26 civilians and in total destroyed 345 buildings, resulting in property damage estimated between 5 and 10 million dollars. \n \n The fire would be the last of three devastating fires that affected the city, the other two occurring in 1776 & 1835. While very destructive, the $YEAR$ fire confirmed the value of building codes restricting wood-frame construction, which were put in place after the lessons learnt from the previous fires.;;;;;;;;;;;;;x
 EVTNAME530001;The Great New York City Fire of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA530001;Fully fund reconstruction efforts.;;;;;;;;;;;;;x
