--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3708,14 +3708,14 @@ PROV3706;Miyazu;;;;;;;;;;;;;x
 PROV3707;Maizuru;;;;;;;;;;;;;x
 PROV3708;Flores;;;;;;;;;;;;;x
 PROV3709;Lacandon;;;;;;;;;;;;;x
-PROV3710;Ilisu;;;;;;;;;;;;;x
-PROV3711;Kutkashen;;;;;;;;;;;;;x
-PROV3712;Gokchay;;;;;;;;;;;;;x
-PROV3713;Shemakha;;;;;;;;;;;;;x
-PROV3714;Erfi;;;;;;;;;;;;;x
-PROV3715;Sumgait;;;;;;;;;;;;;x
-PROV3716;Oni;;;;;;;;;;;;;x
-PROV3717;Kwaisa;;;;;;;;;;;;;x
+PROV3710;Murakami;;;;;;;;;;;;;x
+PROV3711;Kurokawa;;;;;;;;;;;;;x
+PROV3712;Shibata;;;;;;;;;;;;;x
+PROV3713;Suibara;;;;;;;;;;;;;x
+PROV3714;Muramatsu;;;;;;;;;;;;;x
+PROV3715;Mineoka;;;;;;;;;;;;;x
+PROV3716;Nagaoka;;;;;;;;;;;;;x
+PROV3717;Yoita;;;;;;;;;;;;;x
 PROV3718;Omalo;;;;;;;;;;;;;x
 PROV3719;Tuapse;;;;;;;;;;;;;x
 PROV3720;Mzymta;;;;;;;;;;;;;x
