added second set of chubu provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3716,14 +3716,14 @@ PROV3714;Muramatsu;;;;;;;;;;;;;x
 PROV3715;Mineoka;;;;;;;;;;;;;x
 PROV3716;Nagaoka;;;;;;;;;;;;;x
 PROV3717;Yoita;;;;;;;;;;;;;x
-PROV3718;Omalo;;;;;;;;;;;;;x
-PROV3719;Tuapse;;;;;;;;;;;;;x
-PROV3720;Mzymta;;;;;;;;;;;;;x
-PROV3721;Omarishara;;;;;;;;;;;;;x
-PROV3722;Of;;;;;;;;;;;;;x
-PROV3723;Ardahan;;;;;;;;;;;;;x
-PROV3724;Yervandashat;;;;;;;;;;;;;x
-PROV3725;Aralik;;;;;;;;;;;;;x
+PROV3718;Shiiya;;;;;;;;;;;;;x
+PROV3719;Takada;;;;;;;;;;;;;x
+PROV3720;Muikamachi;;;;;;;;;;;;;x
+PROV3721;Itoigawa;;;;;;;;;;;;;x
+PROV3722;Ojiya;;;;;;;;;;;;;x
+PROV3723;Uozu;;;;;;;;;;;;;x
+PROV3724;Takaoka;;;;;;;;;;;;;x
+PROV3725;Nanao;;;;;;;;;;;;;x
 PROV3726;Qazakh;;;;;;;;;;;;;x
 PROV3727;Karavansaray;;;;;;;;;;;;;x
 PROV3728;Vasakashen;;;;;;;;;;;;;x
