added Southern Line Islands - fixed bug where it was on provinces.bmp but not defined

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3322,7 +3322,7 @@ PROV3320;Kelmis;;;;;;;;;;;;;x
 PROV3321;Mitroviça;;;;;;;;;;;;;x
 PROV3322;Thionville;;;;;;;;;;;;;x
 PROV3323;Koninu;;;;;;;;;;;;;x
-PROV3324;Line Islands;;;;;;;;;;;;;x
+PROV3324;Northern and Central Line Islands;;;;;;;;;;;;;x
 PROV3325;Rubiás;;;;;;;;;;;;;x
 PROV3326;San Mun;;;;;;;;;;;;;x
 PROV3327;Jérémie;;;;;;;;;;;;;x
@@ -3734,7 +3734,7 @@ PROV3732;Tsuruga;;;;;;;;;;;;;x
 PROV3733;Obama;;;;;;;;;;;;;x
 PROV3734;Takayama;;;;;;;;;;;;;x
 PROV3735;Gujo;;;;;;;;;;;;;x
-PROV3736;Rustavi;;;;;;;;;;;;;x
+PROV3736;Southern Line Islands;;;;;;;;;;;;;x
 PROV3737;Bobnevi;;;;;;;;;;;;;x
 PROV3738;Yusufeli;;;;;;;;;;;;;x
 PROV3739;Agdzhabedi;;;;;;;;;;;;;x
