added erie canal

--- a/TGC/localisation/00_events_0030000.csv
+++ b/TGC/localisation/00_events_0030000.csv
@@ -1044,6 +1044,14 @@ EVTOPTE36999;Invest the minimum amount.;;;;;;;;;;;;;x
 EVTDESC37000;The Chunnel is done.;;;;;;;;;;;;;x
 EVTNAME37000;The Construction of the Channel Tunnel is finished;;;;;;;;;;;;;x
 EVTOPTA37000;England and France, disconnected no more;;;;;;;;;;;;;x
+EVTDESC37001;We have gathered engineers and specialists from across our country and we are ready to begin the construction of the Erie Canal. The costs have been estimated but the we can always give them more resources to try and accelerate the construction.;;;;;;;;;;;;;x
+EVTNAME37001;The Construction of the Erie Canal;;;;;;;;;;;;;x
+EVTOPTA37001;Give them more than they estimated.;;;;;;;;;;;;;x
+EVTOPTB37001;Give them the amount estimated.;;;;;;;;;;;;;x
+EVTOPTC37001;Give them less than they estimated.;;;;;;;;;;;;;x
+EVTDESC37002;The canal took years and thousands of workers to be built but today on $YEAR$, the canal was officially opened, marked by a statewide Grand Celebration that culminated in a series of celebratory cannon shots across the whole canal. Leading from the Seneca Chief, the Governor of New York travelled alongside a flotilla of boats for 10 days from Buffalo to New York City. Once he arrived, he ceremonially poured water from Lake Erie into New York Harbor to mark the "Wedding of the Waters." On the return trip, the Seneca Chief brought back a keg of water from the Atlantic Ocean, which was poured into Lake Erie.;;;;;;;;;;;;;x
+EVTNAME37002;The Erie Canal is Finished;;;;;;;;;;;;;x
+EVTOPTA37002;The canal will greatly help $COUNTRY$.;;;;;;;;;;;;;x
 EVTDESC37200;An outspoken critic of our regime, the current head of the Bonapartes has been granted asylum in Switzerland and from there is encouraging our subjects to challenge our legitimacy. Should we demand the Swiss extradite him?;Un franc critique de notre régime, un Bonaparte s'est vu accorder l'asile en Suisse et de là, il encourage nos sujets à défier notre légitimité. Devons-nous demander à la Suisse de l'extrader ?;Der aktuelle Kopf der Familie Bonaparte, ein offener Kritiker unseres Regimes, hat von der Schweiz Asyl gewährt bekommen. Jetzt ermutigt er von dort aus unsere Untertanen, unsere Legitimität in Frage zu stellen. Sollen wir von der Schweiz seine Auslieferung verlangen?;;;;;;;;;;;x
 EVTNAME37200;Louis Napoleon in Switzerland;Louis Napoléon en Suisse;Louis-Napoléon in der Schweiz;;;;;;;;;;;x
 EVTOPTA37200;Demand the Swiss extradite him!;Demandez à la Suisse de l'extrader !;Von der Schweiz seine Auslieferung fordern!;;;;;;;;;;;x
