--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -423,6 +423,16 @@ end_the_war;End the War;;;;;;;;;;;;;x
 end_the_war_desc;Our enemy is defeated. The people call out for us to end the war, even if we don’t get everything we intended.;;;;;;;;;;;;;x
 enslaved_freedom;Forced Enslavement;;;;;;;;;;;;;x
 enslaved_freedom_desc;Some lucky slaves have earned their freedom, or were spared enslavement in the first place. Their freedom is at an end. We will seek them out and make them work, though it will lower our standing in the world and could spark rebellion amongst the people of $COUNTRY$.;;;;;;;;;;;;;x
+erie_canal_construction;Building the Erie Canal;;;;;;;;;;;;;x
+erie_canal_construction_desc;The Erie Tunnel is currently under construction. Construction will take approximately 3 to 5 years.;;;;;;;;;;;;;x
+erie_canal_here;The Erie Canal;;;;;;;;;;;;;x
+erie_canal_here_desc;We own the Erie, a huge feat of engineering linking the Great Lakes and the Atlantic Oceans, and we receive the economic dividends of its presence and glory for its possession.;;;;;;;;;;;;;x
+erie_canal_midwest;The Erie Canal—Trade Links;;;;;;;;;;;;;x
+erie_canal_midwest_desc;The utility of the Erie Canal extends far past its immediate vicinity, for it allows goods from the East to quickly and easily flow to the West, and vice versa.;;;;;;;;;;;;;x
+erie_canal;The Erie Canal;;;;;;;;;;;;;x
+erie_canal_desc;We own the Erie, a huge feat of engineering linking the Great Lakes and the Atlantic Oceans, and we receive the economic dividends of its presence and glory for its possession.;;;;;;;;;;;;;x
+erie_canal_newyork;The Erie Canal—Trade Links;;;;;;;;;;;;;x
+erie_canal_newyork_desc;The utility of the Erie Canal extends far past its immediate vicinity, for it allows goods from the East to quickly and easily flow to the West, and vice versa.;;;;;;;;;;;;;x
 escola_industrial_porto;Industrial School of Porto;;;;;;;;;;;;;x
 escola_industrial_porto_desc;The Industrial School is working to harness industrial science and technology in support of our industrialisation policies.;;;;;;;;;;;;;x
 european_military_mission;Military Mission;;;;;;;;;;;;;x
