split lorraine along the maas river

--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -118,7 +118,8 @@ PRU_396;Eupen-Malmedy;;;;;;;;;;;;;x
 LUX_397;Luxembourg;;;;;;;;;;;;;x
 FRA_404;Artois-Picardie;;;;;;;;;;;;;x
 FRA_406;Champagne;;;;;;;;;;;;;x
-FRA_411;Lorraine;;;;;;;;;;;;;x
+FRA_411;East Lorraine;;;;;;;;;;;;;x
+FRA_414;West Lorraine;;;;;;;;;;;;;x
 FRA_412;Alsace-Lorraine;;;;;;;;;;;;;x
 FRA_418;Normandie;;;;;;;;;;;;;x
 FRA_420;Bretagne;;;;;;;;;;;;;x
