--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3753,16 +3753,16 @@ PROV3751;Ueda;;;;;;;;;;;;;x
 PROV3752;Matsumoto;;;;;;;;;;;;;x
 PROV3753;Komoro;;;;;;;;;;;;;x
 PROV3754;Iwamurada;;;;;;;;;;;;;x
-PROV3755;Ashotsk;;;;;;;;;;;;;x
-PROV3756;Tuzludzha;;;;;;;;;;;;;x
-PROV3757;Tsalka;;;;;;;;;;;;;x
-PROV3758;Lentekhi;;;;;;;;;;;;;x
-PROV3759;Ispir;;;;;;;;;;;;;x
-PROV3760;Hopa;;;;;;;;;;;;;x
-PROV3761;Dugur;;;;;;;;;;;;;x
-PROV3762;Norashen;;;;;;;;;;;;;x
-PROV3763;Bashkend;;;;;;;;;;;;;x
-PROV3764;Agdzhakend;;;;;;;;;;;;;x
+PROV3755;Tatsuoka;;;;;;;;;;;;;x
+PROV3756;Takashima;;;;;;;;;;;;;x
+PROV3757;Takato;;;;;;;;;;;;;x
+PROV3758;Iida;;;;;;;;;;;;;x
+PROV3759;Koromo;;;;;;;;;;;;;x
+PROV3760;Kariya;;;;;;;;;;;;;x
+PROV3761;Hekinan;;;;;;;;;;;;;x
+PROV3762;Nishio;;;;;;;;;;;;;x
+PROV3763;Okazaki;;;;;;;;;;;;;x
+PROV3764;Tahara;;;;;;;;;;;;;x
 PROV3765;Dzhebrail;;;;;;;;;;;;;x
 PROV3766;Lachin;;;;;;;;;;;;;x
 PROV3767;Shulaver;;;;;;;;;;;;;x
