--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1281,6 +1281,14 @@ JBJ_proletarian_dictatorship;Zakatal DR;;;;;;;;;;;;;x
 JBJ_prussian_constitutionalism;Djamaats of Djaro-Belokani;;;;;;;;;;;;;x
 JBJ_rus_colonial_company;Zakataly Okrug;;;;;;;;;;;;;x
 JBJ_rus_dominion;Zakataly Okrug;;;;;;;;;;;;;x
+TBS_absolute_monarchy;Jalisco;;;;;;;;;;;;;x
+TBS_democracy;Jalisco;;;;;;;;;;;;;x
+TBS_fascist_dictatorship;Jalisco State;;;;;;;;;;;;;x
+TBS_federal_democracy;Jalisco;;;;;;;;;;;;;x
+TBS_hms_government;Jalisco;;;;;;;;;;;;;x
+TBS_presidential_dictatorship;Jalisco;;;;;;;;;;;;;x
+TBS_proletarian_dictatorship;People’s Republic of Jalisco;;;;;;;;;;;;;x
+TBS_prussian_constitutionalism;Jalisco;;;;;;;;;;;;;x
 KAG_absolute_monarchy;Kaga;;;;;;;;;;;;;x
 KAG_hms_government;Kaga;;;;;;;;;;;;;x
 KAG_prussian_constitutionalism;Kaga;;;;;;;;;;;;;x
