--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -349,6 +349,7 @@ JAS;Jaisalmer;Jaisalmer;Jaisalmer;;;;;;;;;;;x
 JAV;Java;Java;Java;;;;;;;;;;;x
 JBJ;Zakatal;;;;;;;;;;;;;x
 JEY;Jeypura;;;;;;;;;;;;;x
+JLS;Jalisco;;;;;;;;;;;;;x
 JOD;Jodhpur;Jodhpur;Jodhpur;;;;;;;;;;;x
 JOH;Johor;;;;;;;;;;;;;x
 JOR;Jordan;;;;;;;;;;;;;x
