--- a/TGC/localisation/00_countries-parties.csv
+++ b/TGC/localisation/00_countries-parties.csv
@@ -2547,6 +2547,29 @@ JAV_liberal;The Liberal Faction;Faction libérale;Die liberale Fraktion;;;;;;;;;;
 JAV_reactionary;The Nationalist Faction;Faction nationaliste;Die nationalistische Fraktion;;;;;;;;;;;x
 JAV_social_liberal;Social-Liberals;Social-Liberals;Social-Liberals;;;;;;;;;;;x
 JAV_socialist;The Socialist Faction;Faction socialiste;Die sozialistische Fraktion;;;;;;;;;;;x
+JLS_anarcho_liberal;Facción Radical;Partido Federalista;Partido Federalista;;;;;;;;;;;x
+JLS_anarcho_liberal_1;Convencionistas;Partido Federalista;Partido Federalista;;;;;;;;;;;x
+JLS_anarcho_liberal_2;Facción Radical;Partido Federalista;Partido Federalista;;;;;;;;;;;x
+JLS_communist;Facción Comunista;;;;;;;;;;;;;x
+JLS_communist_1;Partido Comunista Tabasqueño;;;;;;;;;;;;;x
+JLS_conservative;Partido Conservador;Partido Conservador;Partido Conservador;;;;;;;;;;;x
+JLS_conservative_1;Santanistas;Partido Moderado Liberal;Partido Moderado Liberal;;;;;;;;;;;x
+JLS_conservative_2;Circuito Nacional Porfirista;Partido Moderado Liberal;Partido Moderado Liberal;;;;;;;;;;;x
+JLS_conservative_3;Porfiristas;Partido Constitucionalista;Partido Constitucionalista;;;;;;;;;;;x
+JLS_conservative_4;Centristas;Partido Constitucionalista;Partido Constitucionalista;;;;;;;;;;;x
+JLS_fascist;Facción Fascista;;;;;;;;;;;;;x
+JLS_fascist_1;Partido Fascista Tabasqueño;;;;;;;;;;;;;x
+JLS_fascist_2;Acción Revolucionaria Tabasqueñista;;;;;;;;;;;;;x
+JLS_liberal;Partido Liberal;Partido Liberal;Partido Liberal;;;;;;;;;;;x
+JLS_liberal_1;Partido Constitucional Progresista;Partido Radical Liberal;Partido Radical Liberal;;;;;;;;;;;x
+JLS_liberal_2;Constitucionalistas;Partido Progresista;Partido Progresista;;;;;;;;;;;x
+JLS_liberal_3;Partido Nacional Antirreeleccionista;;;;;;;;;;;;;x
+JLS_reactionary;Imperialistas;Partido Imperialista;Partido Imperialista;;;;;;;;;;;x
+JLS_socialist;Facción Socialista;Partido Imperialista;Partido Imperialista;;;;;;;;;;;x
+JLS_socialist_1;Partido Liberal Tabasqueño;;;;;;;;;;;;;x
+JLS_socialist_2;Partido Liberal Constitucionalista;;;;;;;;;;;;;x
+JLS_socialist_3;Partido Laborista Tabasqueño;;;;;;;;;;;;;x
+JLS_socialist_4;Partido Nacional Revolucionario;;;;;;;;;;;;;x
 JNG_anarcho_liberal;Radical Faction;Anarchist Faction;Anarchist Faction;;;;;;;;;;;x
 JNG_communist;Communist Faction;Communist Faction;Communist Faction;;;;;;;;;;;x
 JNG_conservative;Conservative Faction;Conservative Faction;;;;;;;;;;;;x
