fixed country adjective issue

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -1119,6 +1119,7 @@ WEI_ADJ;Saxon;Saxon;Sächsisch;;;;;;;;;;;x
 WES_ADJ;Westphalian;;;;;;;;;;;;;x
 WHA_ADJ;Welsh;;;;;;;;;;;;;x
 WIA_ADJ;Vientiane;;;;;;;;;;;;;x
+WIN_ADJ;West Indian;;;;;;;;;;;;;x
 WKH_ADJ;Wakhani;;;;;;;;;;;;;x
 WLD_ADJ;Waldeckian;;;;;;;;;;;;;x
 WLL_ADJ;Wallonian;Wallon;Wallonisch;;;;;;;;;;;x
