fixed loc for MAI

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1543,6 +1543,14 @@ MAF_democracy;Central African Federation;;;;;;;;;;;;;x
 MAF_dominion;Freistaat Mittelafrika;;;;;;;;;;;;;x
 MAF_hms_government;Freistaat Mittelafrika;;;;;;;;;;;;;x
 MAF_prussian_constitutionalism;Freistaat Mittelafrika;;;;;;;;;;;;;x
+MAI_absolute_monarchy;Idar State;;;;;;;;;;;;;x
+MAI_bourgeois_dictatorship;Idar;;;;;;;;;;;;;x
+MAI_democracy;Idar;;;;;;;;;;;;;x
+MAI_fascist_dictatorship;Idar State;;;;;;;;;;;;;x
+MAI_hms_government;Idar State;;;;;;;;;;;;;x
+MAI_presidential_dictatorship;Idar State;;;;;;;;;;;;;x
+MAI_proletarian_dictatorship;Idar;;;;;;;;;;;;;x
+MAI_prussian_constitutionalism;Idar State;;;;;;;;;;;;;x
 MAL_absolute_monarchy;Tidore Sultanate;;;;;;;;;;;;;x
 MAL_hms_government;Tidore Sultanate;;;;;;;;;;;;;x
 MAL_prussian_constitutionalism;Tidore Sultanate;;;;;;;;;;;;;x
