--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -445,6 +445,7 @@ LXA;Laos;Lan Xang;LanXang;;;;;;;;;;;x
 MAD;Madagascar;Madagascar;Madagaskar;;;;;;;;;;;x
 MAF;Mittelafrika;;;;;;;;;;;;;x
 MAH;Kolhapur;;;;;;;;;;;;;x
+MAI;Idar;;;;;;;;;;;;;x
 MAJ;Majeerteen;;;;;;;;;;;;;x
 MAK;Makran;Makran;Makran;;;;;;;;;;;x
 MAL;Maluku;;;;;;;;;;;;;x
