TGO changes and some CB fixes (?)

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -124,24 +124,24 @@ EVTOPTC73;Bypass French Revolution Requirements (Default: §RDisabled§!);;;;;;;;;
 EVTOPTD73;Bypass Scramble for China Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTE73;Close;;;;;;;;;;;;;x
 EVTNAME74;The Grand Orchestra Menu, 1/3;;;;;;;;;;;;;x
-EVTDESC74;§BEnable all songs:§! This option will enable all songs to play, ignoring all requirements. This includes cultural, non-cultural and war requirements, each requeriment can be re-adjusted later.\n§BBypass non-cultural requirements:§! This option will bypass non-cultural requirements like year, being a great power, industrial score, which some songs have to play.\n§BBypass warsong requirements: §!This option will make so war songs will play during peace time, the reverse is also true, as peace songs will play during war time.\n§BEnable Japanese Playlist:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.;;;;;;;;;;;;;x
+EVTDESC74;§BEnable all songs:§! This option will enable all songs to play, ignoring all requirements. This includes cultural, non-cultural and war requirements, each requeriment can be re-adjusted later.\n§BBypass non-cultural requirements:§! This option will bypass non-cultural requirements like year, being a great power, industrial score, which some songs have to play.\n§BBypass warsong requirements: §!This option will make so war songs will play during peace time, the reverse is also true, as peace songs will play during war time.\Reset back to base settings:§! Resets everything back to the settings for your country at the start of the game.;;;;;;;;;;;;;x
 EVTOPTA74;Enable all songs;;;;;;;;;;;;;x
 EVTOPTB74;Bypass non-cultural requirements;;;;;;;;;;;;;x
 EVTOPTC74;Bypass warsongs requirements;;;;;;;;;;;;;x
-EVTOPTD74;Japanese Playlist Enabled;;;;;;;;;;;;;x
+EVTOPTD74;Reset back to base settings;;;;;;;;;;;;;x
 EVTNAME74NOTGO;No TGO found!;;;;;;;;;;;;;x
 EVTDESC74NOTGO;It seems you don't have The Grand Orchestra submod active!\n\n You can download it at \n§Bhttps://github.com/The-Grand-Combination/The-Grand-Orchestra§!;;;;;;;;;;;;;x
 EVTOPTA74NOTGO;Oh, sorry!;;;;;;;;;;;;;x
 EVTNAME75;The Grand Orchestra Menu, 2/3;;;;;;;;;;;;;x
-EVTDESC75;§BGeneric songs enabled:§! Enables the default playlist to play to any country, this is pretty much only to asian countries who would otherwise have an exclusive playlist.\n\n§BBrazilian songs enabled:§! Enables brazil-exclusive songs to play. Most brazilian songs are already integrated into the default playlist, so this will have little, but some, effect.\n\n§BBolivian songs enabled:§! Enables bolivia-exclusive songs to play.\n\n§BPeruvian songs enabled:§! Enables peru-exclusive songs to play.;;;;;;;;;;;;;x
-EVTOPTA75;Generic songs enabled;;;;;;;;;;;;;x
+EVTDESC75;§BEnable generic songs:§! Enables the default playlist to play to any country—this is only for countries that do have an exclusive playlist.\n\n§BBrazilian songs enabled:§! Enables brazil-exclusive songs to play. Most brazilian songs are already integrated into the default playlist, so this will have little, but some, effect.\n\n§BBolivian songs enabled:§! Enables bolivia-exclusive songs to play.\n\n§BPeruvian songs enabled:§! Enables peru-exclusive songs to play.;;;;;;;;;;;;;x
+EVTOPTA75;Enable Western generic songs;;;;;;;;;;;;;x
 EVTOPTB75;Brazilian songs enabled;;;;;;;;;;;;;x
 EVTOPTC75;Bolivian songs enabled;;;;;;;;;;;;;x
 EVTOPTD75;Peruvian songs enabled;;;;;;;;;;;;;x
 EVTNAME76;The Grand Orchestra Menu, 3/3 ;;;;;;;;;;;;;x
-EVTDESC76;§BArgentinean songs enabled:§! Enables argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BJapanese Playlist Only:§! The Japanese playlist is extremely well curated, you may wish to only listen to it. This will mute all other songs.;;;;;;;;;;;;;x
+EVTDESC76;§BArgentinean songs enabled:§! Enables argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BEnable Japanese Playlist:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.;;;;;;;;;;;;;x
 EVTOPTA76;Argentinean songs enabled;;;;;;;;;;;;;x
-EVTOPTB76;Japanese only playlist mode;;;;;;;;;;;;;x
+EVTOPTB76;Japanese songs enabled;;;;;;;;;;;;;x
 EVTNAME82;Renaming Menu;;;;;;;;;;;;;x
 EVTDESC82;In TGC, §BProvince and State Renamings will happen §Gautomatically§!, by default, once per year. When this happen, all provinces in the world which has avaliable renamings will be renamed accordingly to it's owner.\nIn this menu you can §Bchange the periodicity§! of the renaming, do a §Bforced renaming§! of all provinces, or §Bturn renaming completely off§!.\nThe province renaming will cause a very minor lag spike so the lowest periodicity is 6 months. For maximum perfomance turn it completely off, but having it running once a year has minimal perfomance impact.\n\nChanging the periodicity will only take effect after the next triggering, so if you were using 5 year periods it will take up to 5 years to change to the new setting.;;;;;;;;;;;;;x
 EVTOPTA82;Turn renaming ON/OFF.;;;;;;;;;;;;;x
