Revert "added renames for great britain"
This reverts commit fe979308f867c20503aa6abe3fc30421f1bf8e7c.

--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -76,7 +76,7 @@ ENG_281;Yorkshire;;;;;;;;;;;;;x
 ENG_284;West Midlands;;;;;;;;;;;;;x
 ENG_288;North Midlands;;;;;;;;;;;;;x
 ENG_291;South Midlands;;;;;;;;;;;;;x
-ENG_292;East Anglia;;;;;;;;;;;;;x
+ENG_292;East England;;;;;;;;;;;;;x
 ENG_296;Southwest England;;;;;;;;;;;;;x
 ENG_300;Southeast England;;;;;;;;;;;;;x
 ENG_304;Isle of Man;;;;;;;;;;;;;x
