added eighth and final set of chubu provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3773,10 +3773,10 @@ PROV3771;Numazu;;;;;;;;;;;;;x
 PROV3772;Gotemba;;;;;;;;;;;;;x
 PROV3773;Shimoda;;;;;;;;;;;;;x
 PROV3774;Ito;;;;;;;;;;;;;x
-PROV3775;San José de Corocorto;;;;;;;;;;;;;x
-PROV3776;Amanao;;;;;;;;;;;;;x
-PROV3777;Chaschuil;;;;;;;;;;;;;x
-PROV3778;Lhaka Honhat;;;;;;;;;;;;;x
+PROV3775;Mizunami-Toki;;;;;;;;;;;;;x
+PROV3776;Kofu;;;;;;;;;;;;;x
+PROV3777;Sachishima;;;;;;;;;;;;;x
+PROV3778;Izu Islands;;;;;;;;;;;;;x
 PROV3779;Coyambuyo;;;;;;;;;;;;;x
 PROV3780;Hoktek T’oi;;;;;;;;;;;;;x
 PROV3781;Guayaquis;;;;;;;;;;;;;x
