added first set of kanto provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3776,15 +3776,15 @@ PROV3774;Ito;;;;;;;;;;;;;x
 PROV3775;Mizunami-Toki;;;;;;;;;;;;;x
 PROV3776;Kofu;;;;;;;;;;;;;x
 PROV3777;Sachishima;;;;;;;;;;;;;x
-PROV3778;Izu Islands;;;;;;;;;;;;;x
-PROV3779;Coyambuyo;;;;;;;;;;;;;x
-PROV3780;Hoktek T’oi;;;;;;;;;;;;;x
-PROV3781;Guayaquis;;;;;;;;;;;;;x
-PROV3782;Rosario;;;;;;;;;;;;;x
-PROV3783;Cabalonca;;;;;;;;;;;;;x
-PROV3784;Aconcagua;;;;;;;;;;;;;x
-PROV3785;Lonco Matro;;;;;;;;;;;;;x
-PROV3786;Curavaca;;;;;;;;;;;;;x
+PROV3778;Otsu;;;;;;;;;;;;;x
+PROV3779;Matsuoka;;;;;;;;;;;;;x
+PROV3780;Mito;;;;;;;;;;;;;x
+PROV3781;Kurobahe;;;;;;;;;;;;;x
+PROV3782;Otawara;;;;;;;;;;;;;x
+PROV3783;Nikko;;;;;;;;;;;;;x
+PROV3784;Karasuyama;;;;;;;;;;;;;x
+PROV3785;Kasama;;;;;;;;;;;;;x
+PROV3786;Shishido;;;;;;;;;;;;;x
 PROV3787;Lonco-ché;;;;;;;;;;;;;x
 PROV3788;Butamelegüe;;;;;;;;;;;;;x
 PROV3789;Tahualmich;;;;;;;;;;;;;x
