added final okinawa prov

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1676,7 +1676,7 @@ PROV1674;Utsunomiya;;;;;;;;;;;;;x
 PROV1675;Nagoya;;;;;;;;;;;;;x
 PROV1676;Shizuoka;;;;;;;;;;;;;x
 PROV1677;Nagano;;;;;;;;;;;;;x
-PROV1678;Okinawa;;;;;;;;;;;;;x
+PROV1678;Uchinaa;;;;;;;;;;;;;x
 PROV1679;Busan;;;;;;;;;;;;;x
 PROV1680;Fez;;;;;;;;;;;;;x
 PROV1681;Wazzan;;;;;;;;;;;;;x
@@ -3776,17 +3776,17 @@ PROV3774;Ito;;;;;;;;;;;;;x
 PROV3775;Mizunami-Toki;;;;;;;;;;;;;x
 PROV3776;Kofu;;;;;;;;;;;;;x
 PROV3777;Sachishima;;;;;;;;;;;;;x
-PROV3778;Otsu;;;;;;;;;;;;;x
-PROV3779;Matsuoka;;;;;;;;;;;;;x
-PROV3780;Mito;;;;;;;;;;;;;x
-PROV3781;Kurobahe;;;;;;;;;;;;;x
-PROV3782;Otawara;;;;;;;;;;;;;x
-PROV3783;Nikko;;;;;;;;;;;;;x
-PROV3784;Karasuyama;;;;;;;;;;;;;x
-PROV3785;Kasama;;;;;;;;;;;;;x
-PROV3786;Shishido;;;;;;;;;;;;;x
-PROV3787;Lonco-ché;;;;;;;;;;;;;x
-PROV3788;Butamelegüe;;;;;;;;;;;;;x
+PROV3778;Izu Islands;;;;;;;;;;;;;x
+PROV3779;Otsu;;;;;;;;;;;;;x
+PROV3780;Matsuoka;;;;;;;;;;;;;x
+PROV3781;Mito;;;;;;;;;;;;;x
+PROV3782;Kurobahe;;;;;;;;;;;;;x
+PROV3783;Otawara;;;;;;;;;;;;;x
+PROV3784;Nikko;;;;;;;;;;;;;x
+PROV3785;Karasuyama;;;;;;;;;;;;;x
+PROV3786;Kasama;;;;;;;;;;;;;x
+PROV3787;Shishido;;;;;;;;;;;;;x
+PROV3788;Borodino Islands;;;;;;;;;;;;;x
 PROV3789;Tahualmich;;;;;;;;;;;;;x
 PROV3790;Güer Aike;;;;;;;;;;;;;x
 PROV3791;Ciaike;;;;;;;;;;;;;x
