added second set of kanto provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3787,15 +3787,15 @@ PROV3785;Karasuyama;;;;;;;;;;;;;x
 PROV3786;Kasama;;;;;;;;;;;;;x
 PROV3787;Shishido;;;;;;;;;;;;;x
 PROV3788;Borodino Islands;;;;;;;;;;;;;x
-PROV3789;Tahualmich;;;;;;;;;;;;;x
-PROV3790;Güer Aike;;;;;;;;;;;;;x
-PROV3791;Ciaike;;;;;;;;;;;;;x
-PROV3792;San Bartolomeo;;;;;;;;;;;;;x
-PROV3793;Burney;;;;;;;;;;;;;x
-PROV3794;Santa Inés;;;;;;;;;;;;;x
-PROV3795;C'éwes-at?l;;;;;;;;;;;;;x
-PROV3796;Hamenk;;;;;;;;;;;;;x
-PROV3797;Wakimáala;;;;;;;;;;;;;x
+PROV3789;Fuchu;;;;;;;;;;;;;x
+PROV3790;Tsuchiura;;;;;;;;;;;;;x
+PROV3791;Aso;;;;;;;;;;;;;x
+PROV3792;Choshi;;;;;;;;;;;;;x
+PROV3793;Takaoka;;;;;;;;;;;;;x
+PROV3794;Sakura;;;;;;;;;;;;;x
+PROV3795;Mobara;;;;;;;;;;;;;x
+PROV3796;Tsurumaki;;;;;;;;;;;;;x
+PROV3797;Kaifuchi;;;;;;;;;;;;;x
 PROV3798;Yaiuwa;;;;;;;;;;;;;x
 PROV3799;Staten Landt;;;;;;;;;;;;;x
 PROV3800;San Juan Bautista de la Ribera de Londres de Pomán;;;;;;;;;;;;;x
