made TRN transalpina

--- a/TGCDivergencesOfDarknessTest/localisation/000_countries-demonyms.csv
+++ b/TGCDivergencesOfDarknessTest/localisation/000_countries-demonyms.csv
@@ -7,6 +7,22 @@ BEL_ADJ;Septiman;;;;;;;;;;;;;x
 QIN_ADJ;Qingqiuan;;;;;;;;;;;;;x
 HRE_ADJ;Imperial;;;;;;;;;;;;;x
 ARC_ADJ;Arcadian;;;;;;;;;;;;;x
+AME_ADJ;Amerigan;;;;;;;;;;;;;x
+TRN_ADJ;Transalpinan;;;;;;;;;;;;;x
+NOV_ADJ;Novgorodian;;;;;;;;;;;;;x
+MUS_ADJ;Muscovite;;;;;;;;;;;;;x
+PSK_ADJ;Pskov;;;;;;;;;;;;;x
+BDG_ADJ;Brandenburger;;;;;;;;;;;;;x
+ELB_ADJ;Elbian;;;;;;;;;;;;;x
+DNB_ADJ;Danubian;;;;;;;;;;;;;x
+NAV_ADJ;Navarran;;;;;;;;;;;;;x
+HKG_ADJ;Hokkaigan;;;;;;;;;;;;;x
+NUS_ADJ;Nusantaran;;;;;;;;;;;;;x
+RHO_ADJ;Rhonnst;;;;;;;;;;;;;x
+BEO_ADJ;Beornian;;;;;;;;;;;;;x
+INC_ADJ;Incan;;;;;;;;;;;;;x
+FRK_ADJ;Frankish;;;;;;;;;;;;;x
+ZHO_ADJ;Zhouraoan;;;;;;;;;;;;;x
 ABA_ADJ;Mokrani;;;;;;;;;;;;;x
 ABK_ADJ;Abkhazian;;;;;;;;;;;;;x
 AB0_ADJ;Samurzakan;;;;;;;;;;;;;x
