--- a/TGCDivergencesOfDarknessTest/localisation/000_countries-names.csv
+++ b/TGCDivergencesOfDarknessTest/localisation/000_countries-names.csv
@@ -7,6 +7,22 @@ BEL;Belgian Confederacy;;;;;;;;;;;;;x
 QIN;Qingqiu;;;;;;;;;;;;;x
 HRE;Holy Roman Empire;;;;;;;;;;;;;x
 ARC;Arcadia;;;;;;;;;;;;;x
+AME;Ameriga;;;;;;;;;;;;;x
+TRN;Transalpina;;;;;;;;;;;;;x
+NOV;Novgorod;;;;;;;;;;;;;x
+MUS;Muscovy;;;;;;;;;;;;;x
+PSK;Pskov;;;;;;;;;;;;;x
+BDG;Brandenburg;;;;;;;;;;;;;x
+ELB;Elbia;;;;;;;;;;;;;x
+DNB;Danubia;;;;;;;;;;;;;x
+NAV;Navarre;;;;;;;;;;;;;x
+HKG;Hokkaigan;;;;;;;;;;;;;x
+NUS;Nusantara;;;;;;;;;;;;;x
+RHO;Rhonnst;;;;;;;;;;;;;x
+BEO;Beornia;;;;;;;;;;;;;x
+INC;Inca;;;;;;;;;;;;;x
+FRK;Frankia;;;;;;;;;;;;;x
+ZHO;Zhourao;;;;;;;;;;;;;x
 ABA;Beni Abbas;;;;;;;;;;;;;x
 ABK;Abkhazia;;;;;;;;;;;;;x
 AB0;Samurzakano;;;;;;;;;;;;;x
