added third set of kanto provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3796,16 +3796,16 @@ PROV3794;Sakura;;;;;;;;;;;;;x
 PROV3795;Mobara;;;;;;;;;;;;;x
 PROV3796;Tsurumaki;;;;;;;;;;;;;x
 PROV3797;Kaifuchi;;;;;;;;;;;;;x
-PROV3798;Yaiuwa;;;;;;;;;;;;;x
-PROV3799;Staten Landt;;;;;;;;;;;;;x
-PROV3800;San Juan Bautista de la Ribera de Londres de Pomán;;;;;;;;;;;;;x
-PROV3801;Plujunta;;;;;;;;;;;;;x
-PROV3802;Salaniva;;;;;;;;;;;;;x
-PROV3803;San Francisco de Yavi;;;;;;;;;;;;;x
-PROV3804;Ensenada;;;;;;;;;;;;;x
-PROV3805;San Gregorio;;;;;;;;;;;;;x
-PROV3806;West Falkland;;;;;;;;;;;;;x
-PROV3807;Stanley;;;;;;;;;;;;;x
+PROV3798;Sanuki;;;;;;;;;;;;;x
+PROV3799;Katsuyama;;;;;;;;;;;;;x
+PROV3800;Tateyama;;;;;;;;;;;;;x
+PROV3801;Kururi;;;;;;;;;;;;;x
+PROV3802;Otaki;;;;;;;;;;;;;x
+PROV3803;Ichinomiya;;;;;;;;;;;;;x
+PROV3804;Ushiku;;;;;;;;;;;;;x
+PROV3805;Shimotsuma;;;;;;;;;;;;;x
+PROV3806;Shimodate;;;;;;;;;;;;;x
+PROV3807;Yuki;;;;;;;;;;;;;x
 PROV3808;Port Egmont;;;;;;;;;;;;;x
 PROV3809;Pebble Island;;;;;;;;;;;;;x
 PROV3810;Keppel Island;;;;;;;;;;;;;x
